# bank-operation-widget

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
bank_operation_widget/: app.py  utils.py
tests/: conftest.py  test_app.py  test_utils.py
