[tool.poetry]
name = "bank-operation-widget"
version = "0.1.0"
description = ""
authors = ["Tigran Saatchyan TSA <mr.saatchyan@yandex.com>"]
readme = "README.md"
packages = [{include = "bank_operation_widget"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
